# c6ol

./: Cargo.toml  README.md
.github/workflows/: deploy-to-pages.yml
client/: .gitignore  Cargo.toml  Trunk.toml  build.sh  index.html  manifest.json  package-lock.json  package.json  style.css  webpack.config.js
client-leptos/: Cargo.toml  Trunk.toml  index.html  style.css
client-leptos/src/: dialog.rs  lib.rs  main.rs
client-sycamore/: Cargo.toml
client-sycamore/src/: main.rs
client-vue/: README.md  eslint.config.js  index.html  package-lock.json
client-vue/src/: App.vue  game.ts
client-vue/src/components/: GameView.vue
client/assets/: entry.js  manifest.json  style.css
client/src/: App.vue  argon2id.rs  blake2b_nz64.rs  c6.ts  dialog.rs  game.ts  game_view.rs  lib.rs  protocol.ts
client/src/components/: Board.vue  BoardView.vue  GameView.vue
core/: Cargo.toml
core/records/: 00.txt  02.txt
core/src/: game.rs  lib.rs  protocol.rs
core/src/game/: bit.rs  nibble.rs  tests.rs
core/tests/: convert_records.rs  corner_cases.rs  delta_encoding.rs
server/: Cargo.toml  c6.go  client.go  go.mod  hub.go  main.go
server/game/: game.go
server/src/: argon2id.rs  db.rs  game.rs  lib.rs  macros.rs  main.rs  manager.rs  pbkdf2_hmac_sha256.rs  protocol.rs  server.rs  shutdown.rs  ws.rs
