[workspace]
members = ["core", "server"]
resolver = "2"

[workspace.lints.rust]
future_incompatible = "warn"
missing_docs = "warn"
nonstandard_style = "warn"
rust_2018_idioms = "warn"
unsafe_code = { level = "forbid", priority = 1 }

[workspace.lints.clippy]
checked_conversions = "warn"
if_not_else = "warn"
ignored_unit_patterns = "warn"
map_unwrap_or = "warn"
missing_errors_doc = "warn"
must_use_candidate = "warn"
# redundant_closure_for_method_calls = "warn"
redundant_else = "warn"
semicolon_if_nothing_returned = "warn"
single_match_else = "warn"
use_self = "warn"
