[package]
name = "c6ol-client"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
argon2 = "0.5"
base64 = "0.22"
c6ol-core = { path = "../core" }
console_error_panic_hook = "0.1.7"
leptos = { version = "0.7", features = ["csr"] }
paste = "1"
ron = "0.10"
serde = "1"
tinyvec = "1"
web-sys = { version = "0.3.72", features = [
    "CanvasRenderingContext2d",
    "DomRect",
    "Storage",
    "TextMetrics",
] }

[features]
default = ["online"]
online = []

[lints]
workspace = true
