[package]
name = "c6ol-core"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
bytes = "1"
bytes-varint = "1"
serde = { version = "1", features = ["derive"] }
strum = { version = "0.28", features = ["derive"] }

[dev-dependencies]
base64 = "0.22"
rand = "0.10"

[lints]
workspace = true
