[package]
name = "c6ol-server"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["ws"] }
c6ol-core = { path = "../core" }
clap = { version = "4.5.20", features = ["derive"] }
futures-util = "0.3"
tokio = { version = "1", features = ["macros", "rt", "signal"] }
tower-http = { version = "0.6", features = ["fs"] }
rand = "0.8"
remain = "0.2"
socket2 = "0.5"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[lints]
workspace = true
