[package]
name = "c6ol-server"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
anyhow = "1"
axum = { version = "0.8", features = ["ws"] }
c6ol-core = { path = "../core" }
chrono = "0.4"
clap = { version = "4.5.20", features = ["derive"] }
futures-util = "0.3"
rand = "0.9"
remain = "0.2"
rusqlite = { version = "0.37", features = ["bundled"] }
socket2 = "0.6"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt", "signal"] }
tokio-util = { version = "0.7.16", features = ["join-map"] }
tower-http = { version = "0.6", features = ["fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[lints]
workspace = true
